results/SpecGenBench/4-shot/log-CanConstruct-2023_11_04_23_53_07.txt
class CanConstruct {
    //@ requires ransomNote != null && magazine != null;
    //@ ensures \result ==> (\forall int i; 0 <= i && i < 26; cnt[i] >= 0);
    //@ ensures !\result ==> (ransomNote.length() > magazine.length() || (\exists int i; 0 <= i && i < 26; cnt[i] < 0));
    public boolean canConstruct(String ransomNote, String magazine) {
        if (ransomNote.length() > magazine.length()) {
            return false;
        }
        int[] cnt = new int[26];
        //@ assume (\forall int i; 0 <= i && i < 26; cnt[i] == 0);
        //@ maintaining 0 <= i && i <= magazine.length();
        //@ maintaining (\forall int j; 0 <= j && j < i; cnt[magazine.charAt(j) - 'a'] > 0);
        //@ decreases magazine.length() - i;
        for (char c : magazine.toCharArray()) {
            cnt[c - 'a']++;
        }
        //@ maintaining 0 <= i && i <= ransomNote.length();
        //@ maintaining (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] >= 0);
        //@ decreases ransomNote.length() - i;
        for (char c : ransomNote.toCharArray()) {
            cnt[c - 'a']--;
            if(cnt[c - 'a'] < 0) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:3: error: cannot find symbol
    //@ ensures \result ==> (\forall int i; 0 <= i && i < 26; cnt[i] >= 0);
                                                              ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:4: error: cannot find symbol
    //@ ensures !\result ==> (ransomNote.length() > magazine.length() || (\exists int i; 0 <= i && i < 26; cnt[i] < 0));
                                                                                                           ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:11: error: cannot find symbol
        //@ maintaining 0 <= i && i <= magazine.length();
                             ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:11: error: cannot find symbol
        //@ maintaining 0 <= i && i <= magazine.length();
                                  ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:12: error: cannot find symbol
        //@ maintaining (\forall int j; 0 <= j && j < i; cnt[magazine.charAt(j) - 'a'] > 0);
                                                      ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:13: error: cannot find symbol
        //@ decreases magazine.length() - i;
                                          ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:17: error: cannot find symbol
        //@ maintaining 0 <= i && i <= ransomNote.length();
                             ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:17: error: cannot find symbol
        //@ maintaining 0 <= i && i <= ransomNote.length();
                                  ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:18: error: cannot find symbol
        //@ maintaining (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] >= 0);
                                                      ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:19: error: cannot find symbol
        //@ decreases ransomNote.length() - i;
                                            ^
  symbol:   variable i
  location: class CanConstruct
10 errors

